funcmap/tests/ui/structure/trait_object_type.stderr
error: mapping over trait object type is not supported
 --> tests/ui/structure/trait_object_type.rs:4:16
  |
4 | struct Test<T>(dyn Fn(T));
  |                ^^^^^^^^^
